Fix: ESC schließt overlays nicht